--- a/public/500.html
+++ b/public/500.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ro">
 <head>
   <meta charset="UTF-8">
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, shrink-to-fit=no" name="viewport">
-  <title>500 &mdash; Stisla</title>
+  <title>Eroare 500 &mdash; Avenor Christmas Fair</title>
 
   <!-- General CSS Files -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
@@ -18,12 +18,12 @@
           <div class="page-inner">
             <h1>500</h1>
             <div class="page-description">
-              Whoopps, something went wrong.
+              Serverul nostru a întâmpinat o eroare. Vă rugăm să încercați din nou mai târziu.
             </div>
           </div>
         </div>
         <div class="simple-footer mt-5">
-          Copyright &copy; Stisla 2018
+          Toate drepturile rezervate &copy; 2020
         </div>
       </div>
     </section>
